feat: update translations

--- a/apps/web/public/static/locales/az/common.json
+++ b/apps/web/public/static/locales/az/common.json
@@ -589,6 +589,9 @@
   "address": "Ünvan",
   "enter_address": "Ünvanı daxil edin",
   "in_person_attendee_address": "Şəxsi (İştirakçının ünvanı)",
+  "somewhere_else": "Başqa yerdə",
+  "custom_attendee_location": "Xüsusi iştirakçı yeri",
+  "any_location": "Hər hansı bir yer",
   "yes": "Bəli",
   "no": "Xeyr",
   "additional_notes": "Əlavə qeydlər",
