--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -589,6 +589,9 @@
   "address": "Adresa",
   "enter_address": "Zadejte adresu",
   "in_person_attendee_address": "Osobně (adresa účastníka)",
+  "somewhere_else": "Jiné místo",
+  "custom_attendee_location": "Vlastní místo účastníka",
+  "any_location": "Jakékoliv místo",
   "yes": "Ano",
   "no": "Ne",
   "additional_notes": "Doplňující poznámky",
