--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -589,6 +589,9 @@
   "address": "Adresse",
   "enter_address": "Geben Sie eine Adresse ein",
   "in_person_attendee_address": "Vor Ort (Adresse von Ihnen)",
+  "somewhere_else": "Anderer Ort",
+  "custom_attendee_location": "Benutzerdefinierter Teilnehmerort",
+  "any_location": "Beliebiger Ort",
   "yes": "Ja",
   "no": "Nein",
   "additional_notes": "Zusätzliche Notizen",
