--- a/apps/web/public/static/locales/es-419/common.json
+++ b/apps/web/public/static/locales/es-419/common.json
@@ -589,6 +589,9 @@
   "address": "Dirección",
   "enter_address": "Ingresa la dirección",
   "in_person_attendee_address": "En persona (Dirección del asistente)",
+  "somewhere_else": "En otro lugar",
+  "custom_attendee_location": "Ubicación personalizada del asistente",
+  "any_location": "Cualquier ubicación",
   "yes": "Sí",
   "no": "No",
   "additional_notes": "Notas adicionales",
