--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -589,6 +589,9 @@
   "address": "Ubicación",
   "enter_address": "Ingrese la dirección",
   "in_person_attendee_address": "En persona (dirección del asistente)",
+  "somewhere_else": "Otro lugar",
+  "custom_attendee_location": "Ubicación personalizada del asistente",
+  "any_location": "Cualquier ubicación",
   "yes": "Sí",
   "no": "No",
   "additional_notes": "Notas Adicionales",
