--- a/apps/web/public/static/locales/fr/common.json
+++ b/apps/web/public/static/locales/fr/common.json
@@ -589,6 +589,9 @@
   "address": "Adresse",
   "enter_address": "Entrer une adresse",
   "in_person_attendee_address": "En personne (adresse du participant)",
+  "somewhere_else": "Autre lieu",
+  "custom_attendee_location": "Lieu personnalisé du participant",
+  "any_location": "N'importe quel lieu",
   "yes": "Oui",
   "no": "Non",
   "additional_notes": "Notes supplémentaires",
