--- a/apps/web/public/static/locales/it/common.json
+++ b/apps/web/public/static/locales/it/common.json
@@ -589,6 +589,9 @@
   "address": "Indirizzo",
   "enter_address": "Immettere l'indirizzo",
   "in_person_attendee_address": "Di persona (indirizzo del partecipante)",
+  "somewhere_else": "Altrove",
+  "custom_attendee_location": "Posizione personalizzata del partecipante",
+  "any_location": "Qualsiasi posizione",
   "yes": "Sì",
   "no": "No",
   "additional_notes": "Note aggiuntive",
