--- a/apps/web/public/static/locales/nl/common.json
+++ b/apps/web/public/static/locales/nl/common.json
@@ -589,6 +589,9 @@
   "address": "Adres",
   "enter_address": "Voer adres in",
   "in_person_attendee_address": "Persoonlijk (adres deelnemer)",
+  "somewhere_else": "Elders",
+  "custom_attendee_location": "Aangepaste locatie deelnemer",
+  "any_location": "Elke locatie",
   "yes": "Ja",
   "no": "Nee",
   "additional_notes": "Aanvullende notities",
