--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -589,6 +589,9 @@
   "address": "Adres",
   "enter_address": "Wprowadź adres",
   "in_person_attendee_address": "Osobiście (adres uczestnika)",
+  "somewhere_else": "Gdzie indziej",
+  "custom_attendee_location": "Niestandardowa lokalizacja uczestnika",
+  "any_location": "Dowolna lokalizacja",
   "yes": "Tak",
   "no": "Nie",
   "additional_notes": "Dotatkowe uwagi",
