--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -589,6 +589,9 @@
   "address": "Адрес",
   "enter_address": "Введите адрес",
   "in_person_attendee_address": "Лично (адрес участника)",
+  "somewhere_else": "Другое место",
+  "custom_attendee_location": "Пользовательское местоположение участника",
+  "any_location": "Любое место",
   "yes": "да",
   "no": "нет",
   "additional_notes": "Дополнительная информация",
