--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -589,6 +589,9 @@
   "address": "地址",
   "enter_address": "输入地址",
   "in_person_attendee_address": "本人(参与者地址)",
+  "somewhere_else": "其他地方",
+  "custom_attendee_location": "自定义参与者位置",
+  "any_location": "任何位置",
   "yes": "是",
   "no": "否",
   "additional_notes": "附加备注",
