--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -589,6 +589,9 @@
   "address": "כתובת",
   "enter_address": "יש להזין כתובת",
   "in_person_attendee_address": "פנים-אל-פנים (בכתובת של המשתתף)",
+  "somewhere_else": "מקום אחר",
+  "custom_attendee_location": "מיקום מותאם אישית של המשתתף",
+  "any_location": "כל מיקום",
   "yes": "כן",
   "no": "לא",
   "additional_notes": "הערות נוספות",
