--- a/apps/web/public/static/locales/pt-BR/common.json
+++ b/apps/web/public/static/locales/pt-BR/common.json
@@ -589,6 +589,9 @@
   "address": "Local",
   "enter_address": "Insira o endereço",
   "in_person_attendee_address": "Pessoalmente (endereço do participante)",
+  "somewhere_else": "Outro Lugar",
+  "custom_attendee_location": "Localização personalizada do participante",
+  "any_location": "Qualquer localização",
   "yes": "Sim",
   "no": "Não",
   "additional_notes": "Observações adicionais",
