--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -340,10 +340,10 @@
   "add_another_calendar": "Add another calendar",
   "other": "Other",
   "email_sign_in_subject": "Your sign-in link for {{appName}}",
-  "round_robin_emailed_you_and_attendees": "{{attendees}} is meeting with {{user}}. We sent an email with a calendar invitation with the details to everyone.",
+  "round_robin_emailed_you_and_attendees": "{{attendees}} meeting with {{user}}. We sent an email with a calendar invitation with the details to everyone.",
   "emailed_you_and_attendees": "We sent an email with a calendar invitation with the details to everyone.",
   "emailed_you_and_attendees_recurring": "We sent an email with a calendar invitation with the details to everyone for the first of these recurring events.",
-  "round_robin_emailed_you_and_attendees_recurring": "{{attendees}} is meeting with {{user}}.We sent an email with a calendar invitation with the details to everyone for the first of these recurring events.",
+  "round_robin_emailed_you_and_attendees_recurring": "{{attendees}} meeting with {{user}}.We sent an email with a calendar invitation with the details to everyone for the first of these recurring events.",
   "emailed_you_and_any_other_attendees": "We sent an email to everyone with this information.",
   "needs_to_be_confirmed_or_rejected": "Your booking still needs to be confirmed or rejected.",
   "needs_to_be_confirmed_or_rejected_recurring": "Your recurring meeting still needs to be confirmed or rejected.",
