--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2548,5 +2548,19 @@
   "sms_limit_reached_subject": "{{appName}}: SMS limit reached",
   "sms_credits": "SMS Credits",
   "managed_sms_credit_allocation": "Manage your team's SMS credits",
+  "no_limit": "No limit",
+  "none": "None",
+  "specific": "Specific",
+  "sms_usage": "Usage",
+  "sms_usage_description": "Your team has 250 credits per member available. More information to sms credits <1>here</1>",
+  "total_sms_credits_per_month": "Total SMS credits per month: {{credits}}",
+  "sms_credits_used": "SMS credits used: {{credits}}",
+  "available_sms_credits": "Available SMS Credits for this month: {{credits}}",
+  "limit_reached": "Limit reached",
+  "percentage_used": "{{amount}}% used",
+  "credit_allocation_for_members":"Credit allocation for members",
+  "amount_credits_for_personal_event_types":"Amount of credits to be used for personal event types:",
+  "nr_credits": "{{amount}} credits",
+  "credit_allocation_description": "Manage how many of your team's credits can be used for team members' personal eventtypes",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
