--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1644,6 +1644,7 @@
   "workflow_example_5": "Send custom email when event is rescheduled to host",
   "workflow_example_6": "Send custom SMS when new event is booked to host",
   "count_managed_to_limit": "Include booking counts from managed event types",
+  "count_personal_to_limit": "Include booking counts from personal event types",
   "welcome_to_cal_header": "Welcome to {{appName}}!",
   "edit_form_later_subtitle": "You'll be able to edit this later.",
   "connect_calendar_later": "I'll connect my calendar later",
@@ -2828,7 +2829,7 @@
   "disable_input_if_prefilled": "Disable input if the URL identifier is prefilled",
   "booking_limits": "Booking Limits",
   "booking_limits_team_description": "Booking limits for team members across all team event types",
-  "limit_team_booking_frequency_description": "Limit how many times members can be booked across all team event types",
+  "limit_team_booking_frequency_description": "Limit how many times members can be booked across all event types",
   "booking_limits_updated_successfully": "Booking limits updated successfully",
   "you_are_unauthorized_to_make_this_change_to_the_booking": "You are unauthorized to make this change to the booking",
   "delegation_credential_disabled": "Delegation credential disabled",
